--- a/package.json
+++ b/package.json
@@ -6,18 +6,26 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "n:lint": "next lint",
+    "p:check": "prettier . --check",
+    "p:whirte": "prettier . --write"
   },
   "dependencies": {
+    "@clerk/backend": "^1.23.8",
     "@clerk/nextjs": "^6.10.2",
+    "@hono/clerk-auth": "^2.0.0",
+    "@hono/zod-validator": "^0.4.2",
+    "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "hono": "^4.6.19",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
