--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "start": "next start",
     "n:lint": "next lint",
     "p:check": "prettier . --check",
-    "p:whirte": "prettier . --write"
+    "p:write": "prettier . --write",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/backend": "^1.23.8",
     "@clerk/nextjs": "^6.10.2",
     "@hono/clerk-auth": "^2.0.0",
     "@hono/zod-validator": "^0.4.2",
+    "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.1",
     "hono": "^4.6.19",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
@@ -34,12 +38,14 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.30.4",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.2",
     "typescript": "^5"
   },
   "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a"
