--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "n:lint": "next lint",
     "p:check": "prettier . --check",
     "p:write": "prettier . --write",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
@@ -30,7 +32,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-zod": "^0.7.0",
-    "hono": "^4.6.20",
+    "hono": "^4.7.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
@@ -45,7 +47,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.19.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@types/node": "^20.17.17",
     "@types/react": "^19.0.8",
@@ -54,9 +55,12 @@
     "drizzle-orm": "^0.39.2",
     "eslint": "^9.19.0",
     "eslint-config-next": "15.1.6",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-check-file": "^3.0.0",
     "eslint-plugin-jsdoc": "^50.6.3",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-no-secrets": "^2.2.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
