--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-papaparse": "^4.4.0",
+    "react-select": "^5.10.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
