feat: add comprehensive financial dashboard with summary, charts, and data visualization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
     "README.md": "*.md",
     "next.config.ts": "eslint*, .prettier*",
     ".env": ".env*"
-  }
+  },
+  "typescript.preferences.autoImportFileExcludePatterns": ["@radix-ui/*"]
 }
