--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "p:write": "prettier . --write",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "tsx ./scripts/seed.ts"
   },
   "dependencies": {
     "@clerk/backend": "^1.23.11",
@@ -27,6 +28,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.66.0",
@@ -38,15 +40,18 @@
     "drizzle-zod": "^0.7.0",
     "hono": "^4.7.0",
     "lucide-react": "^0.474.0",
+    "motion": "^12.4.2",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-currency-input-field": "^3.9.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-papaparse": "^4.4.0",
     "react-select": "^5.10.0",
+    "recharts": "^2.15.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
