--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "motion": "^12.4.2",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
+    "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-currency-input-field": "^3.9.0",
